added read function for reading from input by click added element to the list

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     justify-content: space-around;
     align-items: center;
 }
-.wrap__container_input{
+.insert-input{
     height: 50px;
     width: 200px;
     font-size: 20px;
